<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_multirobot_navigation</name>
  <version>1.2.5</version>
  <description>
    The turtlebot3_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="sivasankarg@mepcoeng.ac.in">Sivasankar Ganesan</author>
  <maintainer email="sivasankarg@mepcoeng.ac.in">Sivasankar Ganesan</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_navigation</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
